# quickmt-train

./: .gitignore  404.html  QuickMT-Benchmark.ipynb  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: gh-pages.yml
advanced/: index.html
configs/: enuk-base.yaml  faen-tiny.yaml  isen-base.yaml  isen-tiny-1.yaml  uken-base.yaml
corpus_creation/: index.html
docs/: advanced.md  corpus_creation.md  getting-started.md  index.md  overview.md  parallel_training.md  performance_optimization.md  quickstart.md  tutorial.md
docs/reference/: average.md  config.md  evaluate.md  export.md  filtering.md  train.md
overview/: index.html
parallel_training/: index.html
quickstart/: index.html
reference/average/: index.html
reference/config/: index.html
reference/evaluate/: index.html
reference/export/: index.html
reference/filtering/: index.html
reference/train/: index.html
search/: search_index.json
src/quickmt_train/: average_checkpoints.py  benchmark.py  bouquet_to_files.py  checkpoint_utils.py  config.py  convert_to_ct2.py  corpus_to_hf.py  data.py  dataset_to_files.py  evaluate.py  evaluator.py  filter_basic.py  filter_static_embeddings.py  finetranslations_to_files.py  flores_to_files.py  model.py  modules.py  optuna_search.py  processors.py  tracker.py  train.py  utils.py
tests/: test_dropout_decay.py  test_logit_softcapping.py  test_model_generation.py  test_processors.py  test_rope.py
tutorial/: index.html
