[project]
name = "quickmt-train"
version = "0.1.0"
description = "A NMT training library built from scratch with PyTorch"
authors = [
    { name = "quickmt"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.0",
    "fire",
    "scipy",
    "numpy",
    "safetensors",
    "pyyaml",
    "nltk",
    "sacremoses",
    "datasets",
    "sacrebleu",
    "sentence-transformers",
    "fasttext-numpy2",
    "quickmt @ git+https://github.com/quickmt/quickmt.git"
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
track = [
    "aim"
]
optimize = [
    "optuna",
    "optuna-dashboard",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/quickmt"
Repository = "https://github.com/quickmt/quickmt-train"

[project.scripts]
quickmt-train = "quickmt_train.train:main"
quickmt-flores-download = "quickmt_train.flores_to_files:main"
quickmt-avg = "quickmt_train.average_checkpoints:main"
quickmt-export = "quickmt_train.convert_to_ct2:main"
quickmt-eval = "quickmt_train.evaluate:main"
quickmt-optimize = "quickmt_train.optuna_search:main"
quickmt-clean-embeddings = "quickmt_train.filter_static_embeddings:main"
quickmt-clean-primary = "quickmt_train.filter_basic:main"
quickmt-dataset-to-files = "quickmt_train.dataset_to_files:main"
quickmt-dataset-upload = "quickmt_train.corpus_to_hf:main"
quickmt-finetranslations-download = "quickmt_train.finetranslations_to_files:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
